--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             </div>
             <div id="globe">
             </div>
-            <div id="info-box">
+<!--             <div id="info-box">
                 A tribute to the <a href="http://work.gmunk.com/TRON-Board-Room">boardroom scene</a> in Disney's <a href="http://www.imdb.com/title/tt1104001/">Tron: Legacy</a>.  Built for reuse. Source on <a href="http://github.com/arscan/encom-globe/" class="github-link">Github</a>.
             </div>
             <div id="options">
@@ -444,7 +444,7 @@
                             Seconds per Rotation
                         </label>
                         <input type="text" id="globe-spr" data-slider="true" data-slider-range="1, 120" data-slider-step="1" data-slider-highlight="true" value="28"/>
-
+ -->
                         <!--
                         <label>
                             Points per Degree
@@ -457,7 +457,7 @@
                         <input type="text" id="globe-ps" data-slider="true" data-slider-range=".1,1.0" data-slider-step=".1" data-slider-highlight="true" value=".6"/>
                         -->
 
-                        <label>
+<!--                         <label>
                             Intro Duration (ms)
                         </label>
                         <input type="text" id="globe-id" data-slider="true" data-slider-range="500,5000" data-slider-step="100" data-slider-highlight="true" value="2000"/>
@@ -489,13 +489,13 @@
                             <input type="checkbox" id="globe-dd" value="1" checked>
                         </div>
                     </div>
-
+ -->
                     <div id="apply-button" class="button">Reload</div>
 
                     
                 </div>
             </div>
-            <div class="header" id="header-top">
+<!--             <div class="header" id="header-top">
                 <div class="header-left-section">CENTRAL SYSTEM DATA ... <span class="alt-1">LAUNCH ENCOM GLOBALIZATION</span></div>
                 <div class="header-right-section">OIA | 012</div>
             </div>
@@ -507,9 +507,9 @@
             <div id="thumbprint">
                 <img src="resources/thumbprint.png" />
             </div>
-            <!-- probably should remove these and have them created in the script-->
+             probably should remove these and have them created in the script
             <div class="header-animator" id="header-animator-inside"></div>
-            <div class="header-animator" id="header-animator-outside"></div>
+            <div class="header-animator" id="header-animator-outside"></div> -->
 
         </div>
         <!-- ref:include analytics -->
